# Delay-Audio-Plugin-Demo

./: .gitignore  CMakeLists.txt  MyDelayPlugin.jucer  README.md  TODO.md
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/MyDelayPlugin.xcodeproj/: project.pbxproj
Builds/MacOSX/MyDelayPlugin.xcodeproj/xcshareddata/xcschemes/: MyDelayPlugin - AU.xcscheme  MyDelayPlugin - All.xcscheme
Builds/VisualStudio2022/: MyDelayPlugin.sln  MyDelayPlugin_SharedCode.vcxproj  MyDelayPlugin_SharedCode.vcxproj.filters  MyDelayPlugin_StandalonePlugin.vcxproj  MyDelayPlugin_StandalonePlugin.vcxproj.filters  MyDelayPlugin_VST3.vcxproj  MyDelayPlugin_VST3.vcxproj.filters  MyDelayPlugin_VST3ManifestHelper.vcxproj  resources.rc
JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
Source/: AudioHelpers.h  ComboBox.cpp  ComboBox.h  Delay.cpp  Delay.h  FX_Panel.cpp  FX_Panel.h  Gain.cpp  Gain.h  Gain_Panel.cpp  Gain_Panel.h  Main_Panel.cpp  Main_Panel.h  MyLookAndFeel.h  Panel_Base.cpp  Panel_Base.h  ParameterButton.cpp  ParameterButton.h  ParameterComboBox.cpp  ParameterComboBox.h  ParameterList.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preset_Manager.cpp  Preset_Manager.h  Rotary_Slider.cpp  Rotary_Slider.h  Slider.cpp  Slider.h  Slider_Text.cpp  Slider_Text.h  TODO.h  UIDemensions.h  VU_Meter.cpp  VU_Meter.h
Source/DSP/: Delay.cpp  Delay.h  Gain.cpp  Gain.h
Source/Other/: AudioHelpers.h  ParameterList.h  Preset_Manager.cpp  Preset_Manager.h
Source/UI/: MyLookAndFeel.h  UIDemensions.h
Source/UI/Panels/: FX_Panel.cpp  FX_Panel.h  Gain_Panel.cpp  Gain_Panel.h  Main_Panel.cpp  Main_Panel.h  Panel_Base.cpp  Panel_Base.h
Source/UI/UI_Units/: ParameterButton.cpp  ParameterButton.h  Rotary_Slider.cpp  Rotary_Slider.h  Slider_Text.cpp  Slider_Text.h  VU_Meter.cpp  VU_Meter.h
